# goit-pyweb-hw-04

./: Dockerfile  main.py  pyproject.toml
storage/: data.json
