[project]
name = "goit-pyweb-hw-04"
version = "0.1.0"
description = ""
authors = [
    {name = "Bohdan-Chekhirkin",email = "ist22-b.chekhirkin@nubip.edu.ua"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
