[project]
name = "module-4"
version = "0.1.0"
description = ""
authors = [{name = "Bohdan-Chekhirkin", email = "ist22-b.chekhirkin@nubip.edu.ua"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false